support_tools/swigwin-3.0.12/Examples/test-suite/errors/swig_pythoncode_bad3.i
%module xxx

%pythoncode %{
  def extra():
  	print "extra a" # indentation is 2 spaces then tab
	  print "extra b" # indentation is tab then 2 spaces
%}
